[tool.poetry]
name = "Vaultea"
version = "1.1.0"
description = "Easy to use file encryption app."
authors = ["70sh1 <70sh1@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.9.1"
dearpygui-extend = "^0.1.2"
pycryptodome = "^3.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
